[package]
name = "uu_tree"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Windows-optimized tree command with enhanced features"
homepage = "https://github.com/uutils/coreutils"
repository = "https://github.com/uutils/coreutils"
keywords = ["coreutils", "windows", "tree", "filesystem", "directory"]
categories = ["command-line-utilities"]

[[bin]]
name = "tree"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

# Windows-specific
windows-sys.workspace = true
windows.workspace = true
winapi-util.workspace = true

# Path handling
dunce.workspace = true
path-slash.workspace = true
normalize-path.workspace = true
winpath.workspace = true

# Performance
rayon = { workspace = true, optional = true }
crossbeam-channel.workspace = true
dashmap.workspace = true
lru.workspace = true
memchr.workspace = true
ahash.workspace = true

# Utilities
regex.workspace = true
walkdir.workspace = true
dirs.workspace = true
termcolor.workspace = true
chrono = { workspace = true, features = ["serde"] }

# Additional dependencies for tree functionality
humansize = "2.1"
once_cell = "1.19"
parking_lot = "0.12"
atty = "0.2"
unicode-width = "0.1"
num_cpus = "1.16"

[dev-dependencies]
tempfile.workspace = true
assert_cmd = "2.0"
predicates = "3.0"

[features]
default = ["parallel", "unicode"]
parallel = ["dep:rayon"]
unicode = []
json = []

[build-dependencies]
chrono = { workspace = true, features = ["serde"] }
