[package]
name = "uu_where"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "High-performance Windows where command implementation"
homepage = "https://github.com/uutils/coreutils"
repository = "https://github.com/uutils/coreutils"
keywords = ["coreutils", "windows", "where", "path", "executable"]
categories = ["command-line-utilities"]

[[bin]]
name = "where"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

# Windows-specific
windows-sys.workspace = true
winapi-util.workspace = true

# Path handling
dunce.workspace = true
path-slash.workspace = true
normalize-path.workspace = true
winpath.workspace = true

# Performance
rayon = { workspace = true, optional = true }
crossbeam-channel.workspace = true
dashmap.workspace = true
lru.workspace = true
memchr.workspace = true
ahash.workspace = true

# Utilities
regex.workspace = true
glob.workspace = true
walkdir.workspace = true
dirs.workspace = true
which.workspace = true
shell-words.workspace = true
termcolor.workspace = true

# Additional dependencies for where functionality
chrono = { version = "0.4", features = ["serde"] }
humansize = "2.1"
once_cell = "1.19"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[features]
default = ["parallel"]
parallel = ["dep:rayon"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "fmt"]
optional = true

[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }
