[package]
name = "arch"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Display machine architecture - Windows optimized"

[[bin]]
name = "arch"
path = "src/main.rs"

[dependencies]
clap.workspace = true
uucore.workspace = true
winpath.workspace = true
thiserror.workspace = true
windows.workspace = true
chrono.workspace = true

# Link to original uutils implementation for fallback
uu_arch = { path = "../../../../src/uu/arch" }
